[tool.poetry]
name = "toastyserver"
version = "0.1.0"
description = ""
authors = ["Ginger <75683114+gingershaped@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "toastyserver", from="src" }]

[tool.poetry.dependencies]
python = "^3.11"
sechat = {git = "https://github.com/gingershaped/sechat", rev = "v3"}
quart = "^0.19.6"
apscheduler = "^3.10.4"
motor = ">=3.6"
odmantic = "^1.0.2"
pydantic = "^2.0.0"
bs4 = "^0.0.1"
aiohttp = "^3.8.5"
hypercorn = "^0.14.4"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
